vlib/v/checker/tests/infix_is_unknown_generic_type_err.vv
interface Value {}

fn main() {
	v := Value(1)
	if v is Nil[int] {
		println('yes')
	}
}
